<resources>
    <string name="app_name">MyCalculator</string>
    <string name="btnZero">0</string>
    <string name="btnOne">1</string>
    <string name="btnTwo">2</string>
    <string name="btnThree">3</string>
    <string name="btnFour">4</string>
    <string name="btnFive">5</string>
    <string name="btnSix">6</string>
    <string name="btnSeven">7</string>
    <string name="btnEight">8</string>
    <string name="btnNine">9</string>
    <string name="btnClear">C</string>
    <string name="btnClearAll">CE</string>
    <string name="btnDelete">Del</string>
    <string name="btnDiv">/</string>
    <string name="btnMulti">X</string>
    <string name="btnAdd">+</string>
    <string name="btnNeg">-</string>
    <string name="btnResult">=</string>
    <string name="btnDot">.</string>
    <string name="reverseBtn">-/+</string>
</resources>
